[tool.poetry]
name = "pva-poetry"
version = "0.1.0"
description = ""
authors = ["Andrii Kylymnyk <a.kylymnyk@gmail.com>"]
readme = "README.md"
packages = [{include = "pva_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
